# stock-forest

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  README.md  pyproject.toml
.github/workflows/: black.yaml  ci.test.yaml  isort.yaml  pyre.yaml  ruff.yaml
data_loader/: data_loader.py  holiday_checker.py  main.py  old_data_loader.py  test_holiday_checker.py
public_data/: public_data.py
src/: data_loader.py  holiday_checker.py  main.py  old_data_loader.py  test_holiday_checker.py
