[tool.poetry]
name = "stock-forest"
version = "0.1.0"
description = ""
authors = ["hashfunc <root@hashfunc.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 311
profile = "black"

[tool.black]
target-version = ["py311"]
