[tool.poetry]
name = "stock-forest"
version = "0.1.0"
description = ""
authors = ["hashfunc <root@hashfunc.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
xmltodict = "^0.13.0"
pyspark = "^3.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[tool.poetry.group.ci.dependencies]
pyre-check = "^0.9.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 311
profile = "black"

[tool.black]
target-version = ["py311"]
