[tool.poetry]
name = "stock-forest"
version = "0.1.0"
description = ""
authors = ["hashfunc <root@hashfunc.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
xmltodict = "^0.13.0"
pyspark = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.7"

[tool.poetry.group.ci.dependencies]
pyre-check = "^0.9.19"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "I"]
